Fix issue with system bar overlapping

--- a/src/styles.less
+++ b/src/styles.less
@@ -42,6 +42,10 @@ html.mobile {
     padding-bottom: env(safe-area-inset-bottom);
   }
 
+  .ant-drawer-content-wrapper {
+    top: env(safe-area-inset-top);
+  }
+
   .ant-popover {
     .ant-popover-inner-content {
       width: 100%;
