--- a/src/styles/themes/dark.less
+++ b/src/styles/themes/dark.less
@@ -124,4 +124,8 @@
 @gridster-item-resizable-handler-width: 5px;
 // ----------------------
 
-
+html.mobile {
+  body {
+    background: @mobile-background-gradient;
+  }
+}
